Added statstics
